--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "7.1.15",
+    "antd": "^4.16.7",
     "axios": "0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
